// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design Tokens matches the Dark theme 1`] = `
"{
  \\"color-background-user\\": \\"rgb(88, 23, 189)\\",
  \\"color-background-trial\\": \\"rgb(13, 58, 31)\\",
  \\"color-background-subaccount\\": \\"rgb(84, 51, 8)\\",
  \\"color-background-primary-stronger\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-destructive-stronger\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-primary-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-destructive-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-warning\\": \\"rgb(255, 179, 122)\\",
  \\"color-background-warning-weakest\\": \\"rgb(64, 19, 15)\\",
  \\"color-background-inverse-strong\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-new\\": \\"rgb(56, 14, 120)\\",
  \\"color-background-strong\\": \\"rgb(57, 71, 98)\\",
  \\"color-background-destructive\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-primary\\": \\"rgb(0, 140, 255)\\",
  \\"color-background-primary-weakest\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-busy\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-success\\": \\"rgb(123, 234, 165)\\",
  \\"color-background-destructive-weakest\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-offline\\": \\"rgb(174, 178, 193)\\",
  \\"color-background-row-striped\\": \\"rgb(31, 48, 76)\\",
  \\"color-background-primary-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-success-weakest\\": \\"rgb(13, 58, 31)\\",
  \\"color-background-destructive-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-error-strong\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-brand-strong\\": \\"rgb(31, 48, 76)\\",
  \\"color-background-brand\\": \\"rgb(57, 71, 98)\\",
  \\"color-background-error\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-neutral-weakest\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-available\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-error-weakest\\": \\"rgb(49, 12, 12)\\",
  \\"color-background-required\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-body\\": \\"rgb(18, 28, 45)\\",
  \\"color-background-primary-strong\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-strong\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-destructive-weak\\": \\"rgba(255, 255, 255, 0.3)\\",
  \\"color-background\\": \\"rgb(31, 48, 76)\\",
  \\"color-background-primary-weak\\": \\"rgba(255, 255, 255, 0.3)\\",
  \\"color-background-stronger\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-background-brand-highlight-weakest\\": \\"rgba(242, 47, 70, 0.1)\\",
  \\"color-background-strongest\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-body-inverse\\": \\"rgb(18, 28, 45)\\",
  \\"color-background-inverse\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-overlay\\": \\"rgba(57, 71, 98, 0.8)\\",
  \\"color-background-unavailable\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-brand-stronger\\": \\"rgb(18, 28, 45)\\",
  \\"color-border-warning-weak\\": \\"rgb(244, 124, 34)\\",
  \\"color-border-warning\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-primary-stronger\\": \\"rgb(235, 244, 255)\\",
  \\"color-border-destructive-stronger\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-warning-weakest\\": \\"rgb(84, 25, 20)\\",
  \\"color-border-primary-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-destructive-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-destructive\\": \\"rgb(235, 86, 86)\\",
  \\"color-border-inverse-strong\\": \\"rgba(255, 255, 255, 0.7)\\",
  \\"color-border-primary\\": \\"rgb(0, 140, 255)\\",
  \\"color-border-primary-weakest\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-border-success\\": \\"rgb(123, 234, 165)\\",
  \\"color-border-destructive-weakest\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-border-destructive-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-primary-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-success-weakest\\": \\"rgb(13, 58, 31)\\",
  \\"color-border-strong\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-weak\\": \\"rgb(75, 86, 113)\\",
  \\"color-border-neutral\\": \\"rgb(0, 140, 255)\\",
  \\"color-border-error\\": \\"rgb(235, 86, 86)\\",
  \\"color-border-error-weakest\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-error-strong\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-error-weak\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-neutral-weak\\": \\"rgb(2, 99, 224)\\",
  \\"color-border\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-inverse-stronger\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-inverse-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-success-weak\\": \\"rgb(20, 176, 83)\\",
  \\"color-border-primary-strong\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-inverse\\": \\"rgba(255, 255, 255, 0.5)\\",
  \\"color-border-destructive-strong\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-primary-weak\\": \\"rgba(255, 255, 255, 0.3)\\",
  \\"color-border-destructive-weak\\": \\"rgba(255, 255, 255, 0.3)\\",
  \\"color-border-inverse-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-weaker\\": \\"rgb(57, 71, 98)\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"2px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"border-width-30\\": \\"4px\\",
  \\"border-width-40\\": \\"8px\\",
  \\"shadow\\": \\"0 4px 16px 0 rgba(0, 0, 0, 0.3)\\",
  \\"shadow-border-destructive-stronger\\": \\"0 0 0 1px #feecec\\",
  \\"shadow-border-primary-stronger\\": \\"0 0 0 1px #ebf4ff\\",
  \\"shadow-border-destructive-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-low\\": \\"0 2px 4px 0 rgba(0, 0, 0, 0.2)\\",
  \\"shadow-border-inverse-strong\\": \\"0 0 0 1px rgba(255, 255, 255, 0.7)\\",
  \\"shadow-border-strong\\": \\"0 0 0 1px #8891aa\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-border-weak\\": \\"0 0 0 1px #4b5671\\",
  \\"shadow-focus-inverse\\": \\"0 0 0 4px rgba(255, 255, 255, 0.4)\\",
  \\"shadow-border-primary\\": \\"0 0 0 1px #008cff\\",
  \\"shadow-border-destructive\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-high\\": \\"0 16px 24px 4px rgba(0, 0, 0, 0.3)\\",
  \\"shadow-border-error-strong\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"shadow-border-destructive-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"shadow-border-error-weak\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-error\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-border-inverse-stronger\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-destructive-strong\\": \\"0 0 0 1px #feecec\\",
  \\"shadow-border-inverse-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-strong\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-primary-weak\\": \\"0 0 0 1px rgba(255, 255, 255, 0.3)\\",
  \\"shadow-border-destructive-weak\\": \\"0 0 0 1px rgba(255, 255, 255, 0.3)\\",
  \\"shadow-border-weaker\\": \\"0 0 0 1px #394762\\",
  \\"shadow-border\\": \\"0 0 0 1px #606b85\\",
  \\"shadow-focus-inset\\": \\"inset 0 0 0 2px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-border-inverse\\": \\"0 0 0 1px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-card\\": \\"0 2px 4px 0 rgba(0, 0, 0, 0.2)\\",
  \\"shadow-border-inverse-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"font-family-text\\": \\"'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"400\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-0\\": \\"0\\",
  \\"line-height-110\\": \\"4rem\\",
  \\"line-height-90\\": \\"2.75rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.5rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.5rem\\",
  \\"line-height-30\\": \\"1.25rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color_green_8\\": \\"rgb(11, 96, 45)\\",
  \\"color_orange_5\\": \\"rgb(250, 153, 80)\\",
  \\"color-data-visualization-10\\": \\"rgb(232, 180, 7)\\",
  \\"color_green_9\\": \\"rgb(13, 58, 31)\\",
  \\"color_orange_6\\": \\"rgb(244, 124, 34)\\",
  \\"color_yellow_1\\": \\"rgb(255, 251, 234)\\",
  \\"color_orange_7\\": \\"rgb(195, 83, 35)\\",
  \\"color_yellow_2\\": \\"rgb(255, 241, 179)\\",
  \\"color_orange_8\\": \\"rgb(141, 49, 24)\\",
  \\"color_yellow_3\\": \\"rgb(255, 233, 128)\\",
  \\"color-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color_orange_9\\": \\"rgb(84, 25, 20)\\",
  \\"color_yellow_4\\": \\"rgb(255, 221, 53)\\",
  \\"color_yellow_5\\": \\"rgb(250, 209, 0)\\",
  \\"color_purple_10\\": \\"rgb(22, 4, 51)\\",
  \\"color_red_1\\": \\"rgb(254, 236, 236)\\",
  \\"color_yellow_6\\": \\"rgb(232, 180, 7)\\",
  \\"color_red_2\\": \\"rgb(252, 207, 207)\\",
  \\"color_yellow_7\\": \\"rgb(194, 142, 0)\\",
  \\"color_blue_1\\": \\"rgb(235, 244, 255)\\",
  \\"color_blue_10\\": \\"rgb(6, 3, 58)\\",
  \\"color_red_3\\": \\"rgb(246, 177, 177)\\",
  \\"color_yellow_8\\": \\"rgb(133, 92, 21)\\",
  \\"color_red_10\\": \\"rgb(49, 12, 12)\\",
  \\"color_blue_2\\": \\"rgb(204, 228, 255)\\",
  \\"color_red_4\\": \\"rgb(245, 138, 138)\\",
  \\"color_yellow_9\\": \\"rgb(84, 51, 8)\\",
  \\"color_purple_1\\": \\"rgb(245, 240, 252)\\",
  \\"color_blue_3\\": \\"rgb(153, 205, 255)\\",
  \\"color_red_5\\": \\"rgb(235, 86, 86)\\",
  \\"color_purple_2\\": \\"rgb(231, 220, 250)\\",
  \\"color_blue_4\\": \\"rgb(102, 179, 255)\\",
  \\"color_red_6\\": \\"rgb(214, 31, 31)\\",
  \\"color_purple_3\\": \\"rgb(200, 175, 240)\\",
  \\"color_blue_5\\": \\"rgb(0, 140, 255)\\",
  \\"color_red_7\\": \\"rgb(173, 17, 17)\\",
  \\"color_purple_4\\": \\"rgb(166, 127, 227)\\",
  \\"color_blue_6\\": \\"rgb(2, 99, 224)\\",
  \\"color_red_8\\": \\"rgb(117, 12, 12)\\",
  \\"color_purple_5\\": \\"rgb(140, 91, 216)\\",
  \\"color_blue_7\\": \\"rgb(4, 60, 181)\\",
  \\"color_yellow_10\\": \\"rgb(61, 33, 6)\\",
  \\"color_red_9\\": \\"rgb(74, 11, 11)\\",
  \\"color_purple_6\\": \\"rgb(109, 46, 209)\\",
  \\"color-data-visualization-1\\": \\"rgb(2, 99, 224)\\",
  \\"color_blue_8\\": \\"rgb(0, 20, 137)\\",
  \\"color-gray-0\\": \\"rgb(255, 255, 255)\\",
  \\"color_purple_7\\": \\"rgb(88, 23, 189)\\",
  \\"color-data-visualization-2\\": \\"rgb(200, 175, 240)\\",
  \\"color_blue_9\\": \\"rgb(3, 11, 93)\\",
  \\"color_purple_8\\": \\"rgb(56, 14, 120)\\",
  \\"color-data-visualization-3\\": \\"rgb(96, 107, 133)\\",
  \\"color-gray-100\\": \\"rgb(18, 28, 45)\\",
  \\"color_purple_9\\": \\"rgb(34, 9, 74)\\",
  \\"color-data-visualization-4\\": \\"rgb(102, 179, 255)\\",
  \\"color-data-visualization-5\\": \\"rgb(14, 124, 58)\\",
  \\"color-data-visualization-6\\": \\"rgb(250, 153, 80)\\",
  \\"color_orange_10\\": \\"rgb(64, 19, 15)\\",
  \\"color-data-visualization-7\\": \\"rgb(195, 83, 35)\\",
  \\"color-data-visualization-8\\": \\"rgb(246, 177, 177)\\",
  \\"color-data-visualization-9\\": \\"rgb(140, 91, 216)\\",
  \\"color_green_10\\": \\"rgb(5, 41, 18)\\",
  \\"color-gray-90\\": \\"rgb(31, 48, 76)\\",
  \\"color-gray-80\\": \\"rgb(57, 71, 98)\\",
  \\"color_green_1\\": \\"rgb(237, 253, 243)\\",
  \\"color-gray-70\\": \\"rgb(75, 86, 113)\\",
  \\"color_green_2\\": \\"rgb(209, 250, 224)\\",
  \\"color-gray-60\\": \\"rgb(96, 107, 133)\\",
  \\"color_green_3\\": \\"rgb(162, 246, 195)\\",
  \\"color-gray-50\\": \\"rgb(136, 145, 170)\\",
  \\"color_green_4\\": \\"rgb(123, 234, 165)\\",
  \\"color-gray-40\\": \\"rgb(174, 178, 193)\\",
  \\"color_orange_1\\": \\"rgb(254, 245, 238)\\",
  \\"color-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color_green_5\\": \\"rgb(54, 213, 118)\\",
  \\"color-gray-30\\": \\"rgb(202, 205, 216)\\",
  \\"color_orange_2\\": \\"rgb(253, 220, 196)\\",
  \\"color_green_6\\": \\"rgb(20, 176, 83)\\",
  \\"color-gray-20\\": \\"rgb(225, 227, 234)\\",
  \\"color_orange_3\\": \\"rgb(250, 194, 160)\\",
  \\"color_green_7\\": \\"rgb(14, 124, 58)\\",
  \\"color-gray-10\\": \\"rgb(244, 244, 246)\\",
  \\"color_orange_4\\": \\"rgb(255, 179, 122)\\",
  \\"size-square-40\\": \\"0.75rem\\",
  \\"size-icon-80\\": \\"2.5rem\\",
  \\"size-square-30\\": \\"0.5rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-square-20\\": \\"0.25rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-square-10\\": \\"0.125rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.5rem\\",
  \\"size-square-190\\": \\"4.5rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.25rem\\",
  \\"size-square-180\\": \\"4.25rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-square-170\\": \\"4rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-square-25\\": \\"0.375rem\\",
  \\"size-square-160\\": \\"3.75rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"4rem\\",
  \\"size-square-150\\": \\"3.5rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-square-140\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-square-130\\": \\"3rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-square-120\\": \\"2.75rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-square-110\\": \\"2.5rem\\",
  \\"size-square-0\\": \\"0\\",
  \\"size-square-100\\": \\"2.25rem\\",
  \\"size-square-200\\": \\"4.75rem\\",
  \\"size-sidebar\\": \\"13.75rem\\",
  \\"size-square-90\\": \\"2rem\\",
  \\"size-square-80\\": \\"1.75rem\\",
  \\"size-square-70\\": \\"1.5rem\\",
  \\"size-square-60\\": \\"1.25rem\\",
  \\"size-square-50\\": \\"1rem\\",
  \\"size-icon-90\\": \\"2.75rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-negative-100\\": \\"-2.25rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-negative-200\\": \\"-4.75rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-negative-90\\": \\"-2rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-negative-80\\": \\"-1.75rem\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-negative-70\\": \\"-1.5rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-negative-60\\": \\"-1.25rem\\",
  \\"space-negative-50\\": \\"-1rem\\",
  \\"space-negative-40\\": \\"-0.75rem\\",
  \\"space-negative-30\\": \\"-0.5rem\\",
  \\"space-negative-20\\": \\"-0.25rem\\",
  \\"space-negative-10\\": \\"-0.125rem\\",
  \\"space-negative-190\\": \\"-4.5rem\\",
  \\"space-negative-180\\": \\"-4.25rem\\",
  \\"space-negative-170\\": \\"-4rem\\",
  \\"space-negative-160\\": \\"-3.75rem\\",
  \\"space-negative-150\\": \\"-3.5rem\\",
  \\"space-negative-140\\": \\"-3.25rem\\",
  \\"space-negative-130\\": \\"-3rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-negative-120\\": \\"-2.75rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"space-negative-110\\": \\"-2.5rem\\",
  \\"color-text-link-destructive-weak\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-text-link-stronger\\": \\"rgb(235, 244, 255)\\",
  \\"color-text-icon-offline\\": \\"rgb(244, 244, 246)\\",
  \\"color-text-link-destructive\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-icon-success\\": \\"rgb(54, 213, 118)\\",
  \\"color-text-warning\\": \\"rgb(255, 179, 122)\\",
  \\"color-text-link-destructive-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-icon-neutral\\": \\"rgb(102, 179, 255)\\",
  \\"color-text-new\\": \\"rgb(166, 127, 227)\\",
  \\"color-text-icon-error\\": \\"rgb(245, 138, 138)\\",
  \\"color-text-inverse-weak\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-icon-available\\": \\"rgb(54, 213, 118)\\",
  \\"color-text-link-destructive-stronger\\": \\"rgb(254, 236, 236)\\",
  \\"color-text-icon-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-success\\": \\"rgb(123, 234, 165)\\",
  \\"color-text-weak\\": \\"rgb(202, 205, 216)\\",
  \\"color-text-icon\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link\\": \\"rgb(0, 140, 255)\\",
  \\"color-text-icon-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-neutral\\": \\"rgb(102, 179, 255)\\",
  \\"color-text-link-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-error\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-icon-inverse\\": \\"rgb(225, 227, 234)\\",
  \\"color-text-error-strong\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-icon-unavailable\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-error-weak\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-link-strong\\": \\"rgb(153, 205, 255)\\",
  \\"color-text-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-link-weak\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-text\\": \\"rgb(244, 244, 246)\\",
  \\"color-text-icon-busy\\": \\"rgb(255, 179, 122)\\",
  \\"color-text-weakest\\": \\"rgb(18, 28, 45)\\",
  \\"color-text-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-inverse-weaker\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-weaker\\": \\"rgb(136, 145, 170)\\",
  \\"color-text-warning-strong\\": \\"rgb(250, 194, 160)\\",
  \\"color-text-icon-warning\\": \\"rgb(255, 179, 122)\\",
  \\"color-text-link-destructive-strong\\": \\"rgb(246, 177, 177)\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;

exports[`Design Tokens matches the Global theme 1`] = `
"{
  \\"color-background-primary-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-primary-lighter\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-destructive-lighter\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-inverse-light\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-error-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-neutral-lightest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-dark\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-success-lightest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-destructive-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-destructive-darkest\\": \\"rgb(49, 12, 12)\\",
  \\"color-background-error-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-primary-lightest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-primary-darkest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-destructive-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-light\\": \\"rgb(246, 177, 177)\\",
  \\"color-background-primary-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-primary-light\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-warning-lightest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-darker\\": \\"rgb(136, 145, 170)\\",
  \\"color-background-darkest\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-user\\": \\"rgb(200, 175, 240)\\",
  \\"color-background-trial\\": \\"rgb(209, 250, 224)\\",
  \\"color-background-subaccount\\": \\"rgb(255, 241, 179)\\",
  \\"color-background-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-inverse-strong\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-new\\": \\"rgb(231, 220, 250)\\",
  \\"color-background-strong\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-background-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-busy\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-offline\\": \\"rgb(174, 178, 193)\\",
  \\"color-background-row-striped\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-destructive-strongest\\": \\"rgb(49, 12, 12)\\",
  \\"color-background-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-brand-strong\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-neutral-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-available\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-required\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-body\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-background\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-stronger\\": \\"rgb(136, 145, 170)\\",
  \\"color-background-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-background-brand-highlight-weakest\\": \\"rgba(242, 47, 70, 0.1)\\",
  \\"color-background-strongest\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-body-inverse\\": \\"rgb(18, 28, 45)\\",
  \\"color-background-inverse\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-overlay\\": \\"rgba(6, 3, 58, 0.4)\\",
  \\"color-background-unavailable\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-brand-stronger\\": \\"rgb(6, 3, 58)\\",
  \\"color-border-destructive-lighter\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-primary-lighter\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-inverse-lightest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-primary-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-lighter\\": \\"rgb(225, 227, 234)\\",
  \\"color-border-error-lightest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-dark\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-destructive-darkest\\": \\"rgb(49, 12, 12)\\",
  \\"color-border-primary-darkest\\": \\"rgb(6, 3, 58)\\",
  \\"color-border-warning-light\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-inverse-lighter\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-success-lightest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-error-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-destructive-light\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-primary-light\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-success-light\\": \\"rgb(54, 213, 118)\\",
  \\"color-border-inverse-darker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-warning-lightest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-destructive-dark\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-neutral-light\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-error-light\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-light\\": \\"rgb(202, 205, 216)\\",
  \\"color-border-warning-weak\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-border-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-inverse-strong\\": \\"rgba(255, 255, 255, 0.7)\\",
  \\"color-border-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-border-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-border-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-destructive-strongest\\": \\"rgb(49, 12, 12)\\",
  \\"color-border-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-border-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-strong\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-weak\\": \\"rgb(202, 205, 216)\\",
  \\"color-border-neutral\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-neutral-weak\\": \\"rgb(136, 145, 170)\\",
  \\"color-border\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-inverse-stronger\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-inverse-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-success-weak\\": \\"rgb(54, 213, 118)\\",
  \\"color-border-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-inverse\\": \\"rgba(255, 255, 255, 0.5)\\",
  \\"color-border-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-primary-weak\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-destructive-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-inverse-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-weaker\\": \\"rgb(225, 227, 234)\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"2px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"border-width-30\\": \\"4px\\",
  \\"border-width-40\\": \\"8px\\",
  \\"shadow-border-inverse-lightest\\": \\"0 0 0 1px #ffffff\\",
  \\"shadow-border-destructive-darker\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-darker\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-light\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-border-destructive-lighter\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-lighter\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-border-inverse-light\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-error-dark\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-lighter\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border-inverse-darker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-dark\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-primary-light\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-destructive-light\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-error-light\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow\\": \\"0 4px 16px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-destructive-stronger\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-stronger\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-destructive-weaker\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-weaker\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-low\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strong\\": \\"0 0 0 1px rgba(255, 255, 255, 0.7)\\",
  \\"shadow-border-strong\\": \\"0 0 0 1px #606b85\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 99, 224, 0.7)\\",
  \\"shadow-border-weak\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-focus-inverse\\": \\"0 0 0 4px rgba(255, 255, 255, 0.4)\\",
  \\"shadow-border-primary\\": \\"0 0 0 1px #0263e0\\",
  \\"shadow-border-destructive\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-high\\": \\"0 16px 24px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-error-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-primary-strongest\\": \\"0 0 0 1px #06033a\\",
  \\"shadow-border-destructive-strongest\\": \\"0 0 0 1px #310c0c\\",
  \\"shadow-border-error-weak\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-border-error\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-inverse-stronger\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-destructive-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-inverse-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-strong\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-primary-weak\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-destructive-weak\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-weaker\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border\\": \\"0 0 0 1px #8891aa\\",
  \\"shadow-focus-inset\\": \\"inset 0 0 0 2px rgba(2, 99, 224, 0.7)\\",
  \\"shadow-border-inverse\\": \\"0 0 0 1px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-card\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"font-family-text\\": \\"'Inter var experimental', 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"400\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-0\\": \\"0\\",
  \\"line-height-110\\": \\"4rem\\",
  \\"line-height-90\\": \\"2.75rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.5rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.5rem\\",
  \\"line-height-30\\": \\"1.25rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color_green_8\\": \\"rgb(11, 96, 45)\\",
  \\"color_orange_5\\": \\"rgb(250, 153, 80)\\",
  \\"color-data-visualization-10\\": \\"rgb(235, 86, 86)\\",
  \\"color_green_9\\": \\"rgb(13, 58, 31)\\",
  \\"color_orange_6\\": \\"rgb(244, 124, 34)\\",
  \\"color_yellow_1\\": \\"rgb(255, 251, 234)\\",
  \\"color_orange_7\\": \\"rgb(195, 83, 35)\\",
  \\"color_yellow_2\\": \\"rgb(255, 241, 179)\\",
  \\"color_orange_8\\": \\"rgb(141, 49, 24)\\",
  \\"color_yellow_3\\": \\"rgb(255, 233, 128)\\",
  \\"color-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color_orange_9\\": \\"rgb(84, 25, 20)\\",
  \\"color_yellow_4\\": \\"rgb(255, 221, 53)\\",
  \\"color_yellow_5\\": \\"rgb(250, 209, 0)\\",
  \\"color_purple_10\\": \\"rgb(22, 4, 51)\\",
  \\"color_red_1\\": \\"rgb(254, 236, 236)\\",
  \\"color_yellow_6\\": \\"rgb(232, 180, 7)\\",
  \\"color_red_2\\": \\"rgb(252, 207, 207)\\",
  \\"color_yellow_7\\": \\"rgb(194, 142, 0)\\",
  \\"color_blue_1\\": \\"rgb(235, 244, 255)\\",
  \\"color_blue_10\\": \\"rgb(6, 3, 58)\\",
  \\"color_red_3\\": \\"rgb(246, 177, 177)\\",
  \\"color_yellow_8\\": \\"rgb(133, 92, 21)\\",
  \\"color_red_10\\": \\"rgb(49, 12, 12)\\",
  \\"color_blue_2\\": \\"rgb(204, 228, 255)\\",
  \\"color_red_4\\": \\"rgb(245, 138, 138)\\",
  \\"color_yellow_9\\": \\"rgb(84, 51, 8)\\",
  \\"color_purple_1\\": \\"rgb(245, 240, 252)\\",
  \\"color_blue_3\\": \\"rgb(153, 205, 255)\\",
  \\"color_red_5\\": \\"rgb(235, 86, 86)\\",
  \\"color_purple_2\\": \\"rgb(231, 220, 250)\\",
  \\"color_blue_4\\": \\"rgb(102, 179, 255)\\",
  \\"color_red_6\\": \\"rgb(214, 31, 31)\\",
  \\"color_purple_3\\": \\"rgb(200, 175, 240)\\",
  \\"color_blue_5\\": \\"rgb(0, 140, 255)\\",
  \\"color_red_7\\": \\"rgb(173, 17, 17)\\",
  \\"color_purple_4\\": \\"rgb(166, 127, 227)\\",
  \\"color_blue_6\\": \\"rgb(2, 99, 224)\\",
  \\"color_red_8\\": \\"rgb(117, 12, 12)\\",
  \\"color_purple_5\\": \\"rgb(140, 91, 216)\\",
  \\"color_blue_7\\": \\"rgb(4, 60, 181)\\",
  \\"color_yellow_10\\": \\"rgb(61, 33, 6)\\",
  \\"color_red_9\\": \\"rgb(74, 11, 11)\\",
  \\"color_purple_6\\": \\"rgb(109, 46, 209)\\",
  \\"color-data-visualization-1\\": \\"rgb(0, 20, 137)\\",
  \\"color_blue_8\\": \\"rgb(0, 20, 137)\\",
  \\"color-gray-0\\": \\"rgb(255, 255, 255)\\",
  \\"color_purple_7\\": \\"rgb(88, 23, 189)\\",
  \\"color-data-visualization-2\\": \\"rgb(14, 124, 58)\\",
  \\"color_blue_9\\": \\"rgb(3, 11, 93)\\",
  \\"color_purple_8\\": \\"rgb(56, 14, 120)\\",
  \\"color-data-visualization-3\\": \\"rgb(13, 58, 31)\\",
  \\"color-gray-100\\": \\"rgb(18, 28, 45)\\",
  \\"color_purple_9\\": \\"rgb(34, 9, 74)\\",
  \\"color-data-visualization-4\\": \\"rgb(0, 140, 255)\\",
  \\"color-data-visualization-5\\": \\"rgb(57, 71, 98)\\",
  \\"color-data-visualization-6\\": \\"rgb(166, 127, 227)\\",
  \\"color_orange_10\\": \\"rgb(64, 19, 15)\\",
  \\"color-data-visualization-7\\": \\"rgb(109, 46, 209)\\",
  \\"color-data-visualization-8\\": \\"rgb(136, 145, 170)\\",
  \\"color-data-visualization-9\\": \\"rgb(117, 12, 12)\\",
  \\"color_green_10\\": \\"rgb(5, 41, 18)\\",
  \\"color-gray-90\\": \\"rgb(31, 48, 76)\\",
  \\"color-gray-80\\": \\"rgb(57, 71, 98)\\",
  \\"color_green_1\\": \\"rgb(237, 253, 243)\\",
  \\"color-gray-70\\": \\"rgb(75, 86, 113)\\",
  \\"color_green_2\\": \\"rgb(209, 250, 224)\\",
  \\"color-gray-60\\": \\"rgb(96, 107, 133)\\",
  \\"color_green_3\\": \\"rgb(162, 246, 195)\\",
  \\"color-gray-50\\": \\"rgb(136, 145, 170)\\",
  \\"color_green_4\\": \\"rgb(123, 234, 165)\\",
  \\"color-gray-40\\": \\"rgb(174, 178, 193)\\",
  \\"color_orange_1\\": \\"rgb(254, 245, 238)\\",
  \\"color-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color_green_5\\": \\"rgb(54, 213, 118)\\",
  \\"color-gray-30\\": \\"rgb(202, 205, 216)\\",
  \\"color_orange_2\\": \\"rgb(253, 220, 196)\\",
  \\"color_green_6\\": \\"rgb(20, 176, 83)\\",
  \\"color-gray-20\\": \\"rgb(225, 227, 234)\\",
  \\"color_orange_3\\": \\"rgb(250, 194, 160)\\",
  \\"color_green_7\\": \\"rgb(14, 124, 58)\\",
  \\"color-gray-10\\": \\"rgb(244, 244, 246)\\",
  \\"color_orange_4\\": \\"rgb(255, 179, 122)\\",
  \\"size-square-40\\": \\"0.75rem\\",
  \\"size-icon-80\\": \\"2.5rem\\",
  \\"size-square-30\\": \\"0.5rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-square-20\\": \\"0.25rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-square-10\\": \\"0.125rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.5rem\\",
  \\"size-square-190\\": \\"4.5rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.25rem\\",
  \\"size-square-180\\": \\"4.25rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-square-170\\": \\"4rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-square-25\\": \\"0.375rem\\",
  \\"size-square-160\\": \\"3.75rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"4rem\\",
  \\"size-square-150\\": \\"3.5rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-square-140\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-square-130\\": \\"3rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-square-120\\": \\"2.75rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-square-110\\": \\"2.5rem\\",
  \\"size-square-0\\": \\"0\\",
  \\"size-square-100\\": \\"2.25rem\\",
  \\"size-square-200\\": \\"4.75rem\\",
  \\"size-sidebar\\": \\"13.75rem\\",
  \\"size-square-90\\": \\"2rem\\",
  \\"size-square-80\\": \\"1.75rem\\",
  \\"size-square-70\\": \\"1.5rem\\",
  \\"size-square-60\\": \\"1.25rem\\",
  \\"size-square-50\\": \\"1rem\\",
  \\"size-icon-90\\": \\"2.75rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-negative-100\\": \\"-2.25rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-negative-200\\": \\"-4.75rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-negative-90\\": \\"-2rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-negative-80\\": \\"-1.75rem\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-negative-70\\": \\"-1.5rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-negative-60\\": \\"-1.25rem\\",
  \\"space-negative-50\\": \\"-1rem\\",
  \\"space-negative-40\\": \\"-0.75rem\\",
  \\"space-negative-30\\": \\"-0.5rem\\",
  \\"space-negative-20\\": \\"-0.25rem\\",
  \\"space-negative-10\\": \\"-0.125rem\\",
  \\"space-negative-190\\": \\"-4.5rem\\",
  \\"space-negative-180\\": \\"-4.25rem\\",
  \\"space-negative-170\\": \\"-4rem\\",
  \\"space-negative-160\\": \\"-3.75rem\\",
  \\"space-negative-150\\": \\"-3.5rem\\",
  \\"space-negative-140\\": \\"-3.25rem\\",
  \\"space-negative-130\\": \\"-3rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-negative-120\\": \\"-2.75rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"space-negative-110\\": \\"-2.5rem\\",
  \\"color-text-link-darker\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-link-destructive-darker\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-link-destructive-light\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-error-dark\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-dark\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-link-light\\": \\"rgb(153, 205, 255)\\",
  \\"color-text-error-light\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-warning-dark\\": \\"rgb(195, 83, 35)\\",
  \\"color-text-link-destructive-dark\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-link-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-link-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-icon-offline\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-icon-success\\": \\"rgb(14, 124, 58)\\",
  \\"color-text-warning\\": \\"rgb(141, 49, 24)\\",
  \\"color-text-link-destructive-strongest\\": \\"rgb(49, 12, 12)\\",
  \\"color-text-icon-neutral\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-new\\": \\"rgb(109, 46, 209)\\",
  \\"color-text-icon-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-inverse-weak\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-icon-available\\": \\"rgb(14, 124, 58)\\",
  \\"color-text-link-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-icon-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-success\\": \\"rgb(14, 124, 58)\\",
  \\"color-text-weak\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-icon\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link\\": \\"rgb(2, 99, 224)\\",
  \\"color-text-icon-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-neutral\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-link-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-text-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-icon-inverse\\": \\"rgb(136, 145, 170)\\",
  \\"color-text-error-strong\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-icon-unavailable\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-error-weak\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-link-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-link-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-text\\": \\"rgb(18, 28, 45)\\",
  \\"color-text-icon-busy\\": \\"rgb(227, 106, 25)\\",
  \\"color-text-weakest\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-inverse-weaker\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-weaker\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-warning-strong\\": \\"rgb(141, 49, 24)\\",
  \\"color-text-icon-warning\\": \\"rgb(227, 106, 25)\\",
  \\"color-text-link-destructive-strong\\": \\"rgb(173, 17, 17)\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;

exports[`Design Tokens matches the Sendgrid theme 1`] = `
"{
  \\"color-background-user\\": \\"rgb(200, 175, 240)\\",
  \\"color-background-trial\\": \\"rgb(209, 250, 224)\\",
  \\"color-background-subaccount\\": \\"rgb(255, 241, 179)\\",
  \\"color-background-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-background-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-background-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-background-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-background-inverse-strong\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-background-new\\": \\"rgb(231, 220, 250)\\",
  \\"color-background-strong\\": \\"rgb(225, 227, 234)\\",
  \\"color-background-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-background-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-busy\\": \\"rgb(244, 124, 34)\\",
  \\"color-background-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-offline\\": \\"rgb(174, 178, 193)\\",
  \\"color-background-row-striped\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-background-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-background-destructive-strongest\\": \\"rgb(49, 12, 12)\\",
  \\"color-background-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-brand-strong\\": \\"rgb(3, 11, 93)\\",
  \\"color-background-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-neutral-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-background-available\\": \\"rgb(20, 176, 83)\\",
  \\"color-background-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-background-required\\": \\"rgb(235, 86, 86)\\",
  \\"color-background-body\\": \\"rgb(255, 255, 255)\\",
  \\"color-background-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-background-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-background-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-background\\": \\"rgb(244, 244, 246)\\",
  \\"color-background-primary-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-background-stronger\\": \\"rgb(136, 145, 170)\\",
  \\"color-background-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-background-brand-highlight-weakest\\": \\"rgba(242, 47, 70, 0.1)\\",
  \\"color-background-strongest\\": \\"rgb(75, 86, 113)\\",
  \\"color-background-body-inverse\\": \\"rgb(18, 28, 45)\\",
  \\"color-background-inverse\\": \\"rgba(255, 255, 255, 0.1)\\",
  \\"color-background-overlay\\": \\"rgba(6, 3, 58, 0.4)\\",
  \\"color-background-unavailable\\": \\"rgb(214, 31, 31)\\",
  \\"color-background-brand-stronger\\": \\"rgb(6, 3, 58)\\",
  \\"color-border-warning-weak\\": \\"rgb(255, 179, 122)\\",
  \\"color-border-warning\\": \\"rgb(244, 124, 34)\\",
  \\"color-border-primary-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-border-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-border-warning-weakest\\": \\"rgb(254, 245, 238)\\",
  \\"color-border-primary-weaker\\": \\"rgb(204, 228, 255)\\",
  \\"color-border-destructive-weaker\\": \\"rgb(252, 207, 207)\\",
  \\"color-border-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-inverse-strong\\": \\"rgba(255, 255, 255, 0.7)\\",
  \\"color-border-primary\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-primary-weakest\\": \\"rgb(235, 244, 255)\\",
  \\"color-border-success\\": \\"rgb(20, 176, 83)\\",
  \\"color-border-destructive-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-destructive-strongest\\": \\"rgb(49, 12, 12)\\",
  \\"color-border-primary-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-border-success-weakest\\": \\"rgb(237, 253, 243)\\",
  \\"color-border-strong\\": \\"rgb(96, 107, 133)\\",
  \\"color-border-weak\\": \\"rgb(202, 205, 216)\\",
  \\"color-border-neutral\\": \\"rgb(2, 99, 224)\\",
  \\"color-border-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-border-error-weakest\\": \\"rgb(254, 236, 236)\\",
  \\"color-border-error-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-error-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-neutral-weak\\": \\"rgb(136, 145, 170)\\",
  \\"color-border\\": \\"rgb(136, 145, 170)\\",
  \\"color-border-inverse-stronger\\": \\"rgba(255, 255, 255, 0.9)\\",
  \\"color-border-inverse-weaker\\": \\"rgba(255, 255, 255, 0.2)\\",
  \\"color-border-success-weak\\": \\"rgb(54, 213, 118)\\",
  \\"color-border-primary-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-border-inverse\\": \\"rgba(255, 255, 255, 0.5)\\",
  \\"color-border-destructive-strong\\": \\"rgb(117, 12, 12)\\",
  \\"color-border-primary-weak\\": \\"rgb(102, 179, 255)\\",
  \\"color-border-destructive-weak\\": \\"rgb(245, 138, 138)\\",
  \\"color-border-inverse-strongest\\": \\"rgb(255, 255, 255)\\",
  \\"color-border-weaker\\": \\"rgb(225, 227, 234)\\",
  \\"border-radius-0\\": \\"0\\",
  \\"border-radius-10\\": \\"2px\\",
  \\"border-radius-20\\": \\"4px\\",
  \\"border-radius-30\\": \\"8px\\",
  \\"border-radius-circle\\": \\"50%\\",
  \\"border-width-0\\": \\"0\\",
  \\"border-width-10\\": \\"1px\\",
  \\"border-width-20\\": \\"2px\\",
  \\"border-width-30\\": \\"4px\\",
  \\"border-width-40\\": \\"8px\\",
  \\"shadow\\": \\"0 4px 16px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-destructive-stronger\\": \\"0 0 0 1px #4a0b0b\\",
  \\"shadow-border-primary-stronger\\": \\"0 0 0 1px #030b5d\\",
  \\"shadow-border-destructive-weaker\\": \\"0 0 0 1px #fccfcf\\",
  \\"shadow-border-primary-weaker\\": \\"0 0 0 1px #cce4ff\\",
  \\"shadow-low\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strong\\": \\"0 0 0 1px rgba(255, 255, 255, 0.7)\\",
  \\"shadow-border-strong\\": \\"0 0 0 1px #606b85\\",
  \\"shadow-focus\\": \\"0 0 0 4px rgba(2, 99, 224, 0.7)\\",
  \\"shadow-border-weak\\": \\"0 0 0 1px #cacdd8\\",
  \\"shadow-focus-inverse\\": \\"0 0 0 4px rgba(255, 255, 255, 0.4)\\",
  \\"shadow-border-primary\\": \\"0 0 0 1px #0263e0\\",
  \\"shadow-border-destructive\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-high\\": \\"0 16px 24px 0 rgba(18, 28, 45, 0.2)\\",
  \\"shadow-border-error-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-primary-strongest\\": \\"0 0 0 1px #06033a\\",
  \\"shadow-border-destructive-strongest\\": \\"0 0 0 1px #310c0c\\",
  \\"shadow-border-error-weak\\": \\"0 0 0 1px #eb5656\\",
  \\"shadow-border-error\\": \\"0 0 0 1px #d61f1f\\",
  \\"shadow-border-inverse-stronger\\": \\"0 0 0 1px rgba(255, 255, 255, 0.9)\\",
  \\"shadow-border-destructive-strong\\": \\"0 0 0 1px #750c0c\\",
  \\"shadow-border-inverse-weaker\\": \\"0 0 0 1px rgba(255, 255, 255, 0.2)\\",
  \\"shadow-border-primary-strong\\": \\"0 0 0 1px #001489\\",
  \\"shadow-border-primary-weak\\": \\"0 0 0 1px #99cdff\\",
  \\"shadow-border-destructive-weak\\": \\"0 0 0 1px #f6b1b1\\",
  \\"shadow-border-weaker\\": \\"0 0 0 1px #e1e3ea\\",
  \\"shadow-border\\": \\"0 0 0 1px #8891aa\\",
  \\"shadow-focus-inset\\": \\"inset 0 0 0 2px rgba(2, 99, 224, 0.7)\\",
  \\"shadow-border-inverse\\": \\"0 0 0 1px rgba(255, 255, 255, 0.5)\\",
  \\"shadow-card\\": \\"0 2px 8px 0 rgba(18, 28, 45, 0.1)\\",
  \\"shadow-border-inverse-strongest\\": \\"0 0 0 1px #ffffff\\",
  \\"font-family-text\\": \\"'Colfax', Helvetica, Arial, sans-serif\\",
  \\"font-family-code\\": \\"'Fira Mono', 'Courier New', Courier, monospace\\",
  \\"font-size-110\\": \\"3rem\\",
  \\"font-size-100\\": \\"2.5rem\\",
  \\"font-size-90\\": \\"2rem\\",
  \\"font-size-80\\": \\"1.75rem\\",
  \\"font-size-70\\": \\"1.5rem\\",
  \\"font-size-60\\": \\"1.25rem\\",
  \\"font-size-50\\": \\"1.125rem\\",
  \\"font-size-40\\": \\"1rem\\",
  \\"font-size-30\\": \\"0.875rem\\",
  \\"font-size-20\\": \\"0.75rem\\",
  \\"font-size-10\\": \\"0.625rem\\",
  \\"font-weight-light\\": \\"400\\",
  \\"font-weight-normal\\": \\"400\\",
  \\"font-weight-medium\\": \\"500\\",
  \\"font-weight-semibold\\": \\"600\\",
  \\"font-weight-bold\\": \\"700\\",
  \\"line-height-0\\": \\"0\\",
  \\"line-height-110\\": \\"4rem\\",
  \\"line-height-90\\": \\"2.75rem\\",
  \\"line-height-100\\": \\"3.25rem\\",
  \\"line-height-80\\": \\"2.5rem\\",
  \\"line-height-70\\": \\"2rem\\",
  \\"line-height-60\\": \\"1.75rem\\",
  \\"line-height-50\\": \\"1.75rem\\",
  \\"line-height-40\\": \\"1.5rem\\",
  \\"line-height-30\\": \\"1.25rem\\",
  \\"line-height-20\\": \\"1.25rem\\",
  \\"line-height-10\\": \\"1rem\\",
  \\"color_green_8\\": \\"rgb(11, 96, 45)\\",
  \\"color_orange_5\\": \\"rgb(250, 153, 80)\\",
  \\"color-data-visualization-10\\": \\"rgb(235, 86, 86)\\",
  \\"color_green_9\\": \\"rgb(13, 58, 31)\\",
  \\"color_orange_6\\": \\"rgb(244, 124, 34)\\",
  \\"color_yellow_1\\": \\"rgb(255, 251, 234)\\",
  \\"color_orange_7\\": \\"rgb(195, 83, 35)\\",
  \\"color_yellow_2\\": \\"rgb(255, 241, 179)\\",
  \\"color_orange_8\\": \\"rgb(141, 49, 24)\\",
  \\"color_yellow_3\\": \\"rgb(255, 233, 128)\\",
  \\"color-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color_orange_9\\": \\"rgb(84, 25, 20)\\",
  \\"color_yellow_4\\": \\"rgb(255, 221, 53)\\",
  \\"color_yellow_5\\": \\"rgb(250, 209, 0)\\",
  \\"color_purple_10\\": \\"rgb(22, 4, 51)\\",
  \\"color_red_1\\": \\"rgb(254, 236, 236)\\",
  \\"color_yellow_6\\": \\"rgb(232, 180, 7)\\",
  \\"color_red_2\\": \\"rgb(252, 207, 207)\\",
  \\"color_yellow_7\\": \\"rgb(194, 142, 0)\\",
  \\"color_blue_1\\": \\"rgb(235, 244, 255)\\",
  \\"color_blue_10\\": \\"rgb(6, 3, 58)\\",
  \\"color_red_3\\": \\"rgb(246, 177, 177)\\",
  \\"color_yellow_8\\": \\"rgb(133, 92, 21)\\",
  \\"color_red_10\\": \\"rgb(49, 12, 12)\\",
  \\"color_blue_2\\": \\"rgb(204, 228, 255)\\",
  \\"color_red_4\\": \\"rgb(245, 138, 138)\\",
  \\"color_yellow_9\\": \\"rgb(84, 51, 8)\\",
  \\"color_purple_1\\": \\"rgb(245, 240, 252)\\",
  \\"color_blue_3\\": \\"rgb(153, 205, 255)\\",
  \\"color_red_5\\": \\"rgb(235, 86, 86)\\",
  \\"color_purple_2\\": \\"rgb(231, 220, 250)\\",
  \\"color_blue_4\\": \\"rgb(102, 179, 255)\\",
  \\"color_red_6\\": \\"rgb(214, 31, 31)\\",
  \\"color_purple_3\\": \\"rgb(200, 175, 240)\\",
  \\"color_blue_5\\": \\"rgb(0, 140, 255)\\",
  \\"color_red_7\\": \\"rgb(173, 17, 17)\\",
  \\"color_purple_4\\": \\"rgb(166, 127, 227)\\",
  \\"color_blue_6\\": \\"rgb(2, 99, 224)\\",
  \\"color_red_8\\": \\"rgb(117, 12, 12)\\",
  \\"color_purple_5\\": \\"rgb(140, 91, 216)\\",
  \\"color_blue_7\\": \\"rgb(4, 60, 181)\\",
  \\"color_yellow_10\\": \\"rgb(61, 33, 6)\\",
  \\"color_red_9\\": \\"rgb(74, 11, 11)\\",
  \\"color_purple_6\\": \\"rgb(109, 46, 209)\\",
  \\"color-data-visualization-1\\": \\"rgb(0, 20, 137)\\",
  \\"color_blue_8\\": \\"rgb(0, 20, 137)\\",
  \\"color-gray-0\\": \\"rgb(255, 255, 255)\\",
  \\"color_purple_7\\": \\"rgb(88, 23, 189)\\",
  \\"color-data-visualization-2\\": \\"rgb(14, 124, 58)\\",
  \\"color_blue_9\\": \\"rgb(3, 11, 93)\\",
  \\"color_purple_8\\": \\"rgb(56, 14, 120)\\",
  \\"color-data-visualization-3\\": \\"rgb(13, 58, 31)\\",
  \\"color-gray-100\\": \\"rgb(18, 28, 45)\\",
  \\"color_purple_9\\": \\"rgb(34, 9, 74)\\",
  \\"color-data-visualization-4\\": \\"rgb(0, 140, 255)\\",
  \\"color-data-visualization-5\\": \\"rgb(57, 71, 98)\\",
  \\"color-data-visualization-6\\": \\"rgb(166, 127, 227)\\",
  \\"color_orange_10\\": \\"rgb(64, 19, 15)\\",
  \\"color-data-visualization-7\\": \\"rgb(109, 46, 209)\\",
  \\"color-data-visualization-8\\": \\"rgb(136, 145, 170)\\",
  \\"color-data-visualization-9\\": \\"rgb(117, 12, 12)\\",
  \\"color_green_10\\": \\"rgb(5, 41, 18)\\",
  \\"color-gray-90\\": \\"rgb(31, 48, 76)\\",
  \\"color-gray-80\\": \\"rgb(57, 71, 98)\\",
  \\"color_green_1\\": \\"rgb(237, 253, 243)\\",
  \\"color-gray-70\\": \\"rgb(75, 86, 113)\\",
  \\"color_green_2\\": \\"rgb(209, 250, 224)\\",
  \\"color-gray-60\\": \\"rgb(96, 107, 133)\\",
  \\"color_green_3\\": \\"rgb(162, 246, 195)\\",
  \\"color-gray-50\\": \\"rgb(136, 145, 170)\\",
  \\"color_green_4\\": \\"rgb(123, 234, 165)\\",
  \\"color-gray-40\\": \\"rgb(174, 178, 193)\\",
  \\"color_orange_1\\": \\"rgb(254, 245, 238)\\",
  \\"color-brand\\": \\"rgb(0, 20, 137)\\",
  \\"color_green_5\\": \\"rgb(54, 213, 118)\\",
  \\"color-gray-30\\": \\"rgb(202, 205, 216)\\",
  \\"color_orange_2\\": \\"rgb(253, 220, 196)\\",
  \\"color_green_6\\": \\"rgb(20, 176, 83)\\",
  \\"color-gray-20\\": \\"rgb(225, 227, 234)\\",
  \\"color_orange_3\\": \\"rgb(250, 194, 160)\\",
  \\"color_green_7\\": \\"rgb(14, 124, 58)\\",
  \\"color-gray-10\\": \\"rgb(244, 244, 246)\\",
  \\"color_orange_4\\": \\"rgb(255, 179, 122)\\",
  \\"size-square-40\\": \\"0.75rem\\",
  \\"size-icon-80\\": \\"2.5rem\\",
  \\"size-square-30\\": \\"0.5rem\\",
  \\"size-icon-70\\": \\"2rem\\",
  \\"size-square-20\\": \\"0.25rem\\",
  \\"size-icon-60\\": \\"1.75rem\\",
  \\"size-90\\": \\"57.5rem\\",
  \\"size-square-10\\": \\"0.125rem\\",
  \\"size-120\\": \\"77rem\\",
  \\"size-icon-50\\": \\"1.75rem\\",
  \\"size-80\\": \\"51rem\\",
  \\"size-0\\": \\"0\\",
  \\"size-110\\": \\"70.5rem\\",
  \\"size-icon-40\\": \\"1.5rem\\",
  \\"size-square-190\\": \\"4.5rem\\",
  \\"size-70\\": \\"44.5rem\\",
  \\"size-100\\": \\"64rem\\",
  \\"size-icon-30\\": \\"1.25rem\\",
  \\"size-square-180\\": \\"4.25rem\\",
  \\"size-60\\": \\"38rem\\",
  \\"size-icon-20\\": \\"1.25rem\\",
  \\"size-square-170\\": \\"4rem\\",
  \\"size-icon-10\\": \\"1rem\\",
  \\"size-square-25\\": \\"0.375rem\\",
  \\"size-square-160\\": \\"3.75rem\\",
  \\"size-50\\": \\"31.5rem\\",
  \\"size-icon-110\\": \\"4rem\\",
  \\"size-square-150\\": \\"3.5rem\\",
  \\"size-40\\": \\"25rem\\",
  \\"size-icon-100\\": \\"3.25rem\\",
  \\"size-square-140\\": \\"3.25rem\\",
  \\"size-30\\": \\"18.5rem\\",
  \\"size-square-130\\": \\"3rem\\",
  \\"size-20\\": \\"12rem\\",
  \\"size-square-120\\": \\"2.75rem\\",
  \\"size-10\\": \\"5.5rem\\",
  \\"size-square-110\\": \\"2.5rem\\",
  \\"size-square-0\\": \\"0\\",
  \\"size-square-100\\": \\"2.25rem\\",
  \\"size-square-200\\": \\"4.75rem\\",
  \\"size-sidebar\\": \\"13.75rem\\",
  \\"size-square-90\\": \\"2rem\\",
  \\"size-square-80\\": \\"1.75rem\\",
  \\"size-square-70\\": \\"1.5rem\\",
  \\"size-square-60\\": \\"1.25rem\\",
  \\"size-square-50\\": \\"1rem\\",
  \\"size-icon-90\\": \\"2.75rem\\",
  \\"space-70\\": \\"1.5rem\\",
  \\"space-negative-100\\": \\"-2.25rem\\",
  \\"space-60\\": \\"1.25rem\\",
  \\"space-negative-200\\": \\"-4.75rem\\",
  \\"space-190\\": \\"4.5rem\\",
  \\"space-50\\": \\"1rem\\",
  \\"space-180\\": \\"4.25rem\\",
  \\"space-40\\": \\"0.75rem\\",
  \\"space-170\\": \\"4rem\\",
  \\"space-30\\": \\"0.5rem\\",
  \\"space-160\\": \\"3.75rem\\",
  \\"space-20\\": \\"0.25rem\\",
  \\"space-150\\": \\"3.5rem\\",
  \\"space-10\\": \\"0.125rem\\",
  \\"space-140\\": \\"3.25rem\\",
  \\"space-130\\": \\"3rem\\",
  \\"space-120\\": \\"2.75rem\\",
  \\"space-negative-90\\": \\"-2rem\\",
  \\"space-110\\": \\"2.5rem\\",
  \\"space-0\\": \\"0\\",
  \\"space-negative-80\\": \\"-1.75rem\\",
  \\"space-100\\": \\"2.25rem\\",
  \\"space-negative-70\\": \\"-1.5rem\\",
  \\"space-200\\": \\"4.75rem\\",
  \\"space-negative-60\\": \\"-1.25rem\\",
  \\"space-negative-50\\": \\"-1rem\\",
  \\"space-negative-40\\": \\"-0.75rem\\",
  \\"space-negative-30\\": \\"-0.5rem\\",
  \\"space-negative-20\\": \\"-0.25rem\\",
  \\"space-negative-10\\": \\"-0.125rem\\",
  \\"space-negative-190\\": \\"-4.5rem\\",
  \\"space-negative-180\\": \\"-4.25rem\\",
  \\"space-negative-170\\": \\"-4rem\\",
  \\"space-negative-160\\": \\"-3.75rem\\",
  \\"space-negative-150\\": \\"-3.5rem\\",
  \\"space-negative-140\\": \\"-3.25rem\\",
  \\"space-negative-130\\": \\"-3rem\\",
  \\"space-90\\": \\"2rem\\",
  \\"space-negative-120\\": \\"-2.75rem\\",
  \\"space-80\\": \\"1.75rem\\",
  \\"space-negative-110\\": \\"-2.5rem\\",
  \\"color-text-link-destructive-weak\\": \\"rgb(246, 177, 177)\\",
  \\"color-text-link-stronger\\": \\"rgb(3, 11, 93)\\",
  \\"color-text-icon-offline\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link-destructive\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-icon-success\\": \\"rgb(14, 124, 58)\\",
  \\"color-text-warning\\": \\"rgb(141, 49, 24)\\",
  \\"color-text-link-destructive-strongest\\": \\"rgb(49, 12, 12)\\",
  \\"color-text-icon-neutral\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-new\\": \\"rgb(109, 46, 209)\\",
  \\"color-text-icon-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-inverse-weak\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-icon-available\\": \\"rgb(14, 124, 58)\\",
  \\"color-text-link-destructive-stronger\\": \\"rgb(74, 11, 11)\\",
  \\"color-text-icon-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-success\\": \\"rgb(14, 124, 58)\\",
  \\"color-text-weak\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-icon\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-link\\": \\"rgb(2, 99, 224)\\",
  \\"color-text-icon-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-neutral\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-link-strongest\\": \\"rgb(6, 3, 58)\\",
  \\"color-text-error\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-icon-inverse\\": \\"rgb(136, 145, 170)\\",
  \\"color-text-error-strong\\": \\"rgb(173, 17, 17)\\",
  \\"color-text-icon-unavailable\\": \\"rgb(214, 31, 31)\\",
  \\"color-text-error-weak\\": \\"rgb(235, 86, 86)\\",
  \\"color-text-link-strong\\": \\"rgb(0, 20, 137)\\",
  \\"color-text-brand-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-link-weak\\": \\"rgb(153, 205, 255)\\",
  \\"color-text\\": \\"rgb(18, 28, 45)\\",
  \\"color-text-icon-busy\\": \\"rgb(227, 106, 25)\\",
  \\"color-text-weakest\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-brand-highlight\\": \\"rgb(242, 47, 70)\\",
  \\"color-text-inverse-weaker\\": \\"rgb(96, 107, 133)\\",
  \\"color-text-inverse\\": \\"rgb(255, 255, 255)\\",
  \\"color-text-weaker\\": \\"rgb(174, 178, 193)\\",
  \\"color-text-warning-strong\\": \\"rgb(141, 49, 24)\\",
  \\"color-text-icon-warning\\": \\"rgb(227, 106, 25)\\",
  \\"color-text-link-destructive-strong\\": \\"rgb(173, 17, 17)\\",
  \\"z-index-0\\": \\"0\\",
  \\"z-index-90\\": \\"90\\",
  \\"z-index-80\\": \\"80\\",
  \\"z-index-70\\": \\"70\\",
  \\"z-index-60\\": \\"60\\",
  \\"z-index-50\\": \\"50\\",
  \\"z-index-40\\": \\"40\\",
  \\"z-index-30\\": \\"30\\",
  \\"z-index-20\\": \\"20\\",
  \\"z-index-10\\": \\"10\\"
}"
`;
